[tool.poetry]
name = "pincer"
version = "0.16.1"
description = "Discord API wrapper rebuilt from scratch."
readme = "docs/PYPI.md"
homepage = "https://pincer.dev"
documentation = "https://docs.pincer.dev"
repository = "https://github.com/Pincer-org/Pincer"
authors = ["Pincer-org <contact@pincer.dev>"]
license = "MIT"
packages = [ {include = 'pincer'} ]
keywords = ["discord", "api", "asynchronous", "websockets", "aiohttp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.urls]
"Discord" = "https://discord.gg/8WkYz3fNFm"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiohttp = "^3.8.1"
Pillow = {version = "^9.2.0", optional = true}
types-Pillow = {version = "^9.2.1", optional = true}
orjson = {version = "^3.7.11", optional = true}
Brotli = {version = "^1.0.9", optional = true}
aiodns = {version = "^3.0.0", optional = true}
cchardet = {version = "^2.1.7", optional = true}

[tool.poetry.dev-dependencies]
coverage = "^6.4"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.971"
pytest-asyncio = "^0.19.0"
nox = "^2022.8.7"
isort = "^5.10.1"

[tool.poetry.extras]
img = ["Pillow", "types-Pillow"]
speed = ["orjson", "Brotli", "aiodns", "cchardet"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[options.package_data]
pincer = "py.typed"

[tool.pytest.ini_options]
testpaths = [
    "tests", "tests/core"
]

[tool.mypy]
mypy_path = "pincer"
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.black]
line-length =  88
target-version = ['py38']
