[metadata]
name = pincer
version = '0.10.1-alpha0'
description = Discord API wrapper rebuild from scratch.
long_description = file: docs/PYPI.md
long_description_content_type = text/markdown
author = Sigmanificient, Arthurdw
author_email = contact@pincer.dev
keywords = discord, api, asynchronous, websockets, aiohttp
license = MIT
license_file = LICENSE
platform = unix, linux, osx, cygwin, windows
url = https://pincer.dev
project_urls =
    Github repository=https://github.com/pincer-org/pincer
    ReadTheDocs=https://pincer.readthedocs.org
    Discord=https://discord.gg/8WkYz3fNFm
classifiers =
    Development Status :: 2 - Pre-Alpha
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
# Development Status :: 6 - Mature
# Development Status :: 7 - Inactive
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages =
    pincer
	pincer.utils
	pincer.middleware
	pincer.core
	pincer.objects
	pincer.objects.guild
	pincer.objects.events
	pincer.objects.user
	pincer.objects.message
	pincer.objects.voice
	pincer.objects.app
install_requires =
    websockets>=10.0
	aiohttp>=3.7.4post0,<3.8.0
python_requires = >=3.8

[options.extras_require]
testing =
    coverage==6.1.2
	flake8==4.0.1
	tox==3.24.4
	pytest==6.2.5
	pytest-cov==3.0.0
	mypy==0.910
	twine==3.6.0
	wheel==0.37.0
img =
    Pillow==8.4.0

[options.package_data]
pincer = py.typed
