[metadata]
name = pincer
version = 0.14.0
description = Discord API wrapper rebuild from scratch.
long_description = file: docs/PYPI.md
long_description_content_type = text/markdown
author = Pincer-org
author_email = contact@pincer.dev
keywords = discord, api, asynchronous, websockets, aiohttp
license = MIT
license_file = LICENSE
platform = unix, linux, osx, cygwin, windows
url = https://pincer.dev
project_urls =
    Github repository=https://github.com/pincer-org/pincer
    ReadTheDocs=https://pincer.readthedocs.org
    Discord=https://discord.gg/8WkYz3fNFm
classifiers =
    Development Status :: 2 - Pre-Alpha
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
# Development Status :: 6 - Mature
# Development Status :: 7 - Inactive
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
include_package_data = True
packages =
    pincer
	pincer.middleware
	pincer.core
	pincer.utils
	pincer.commands
	pincer.commands.components
	pincer.objects
	pincer.objects.voice
	pincer.objects.user
	pincer.objects.events
	pincer.objects.app
	pincer.objects.message
	pincer.objects.guild
install_requires =
	aiohttp>=3.7.4post0,<3.8.0
python_requires = >=3.8

[options.extras_require]
testing =
    coverage==6.2
	flake8==4.0.1
	tox==3.24.4
	pre-commit==2.16.0
	pytest==6.2.5
	pytest-cov==3.0.0
	mypy==0.910
img =
    Pillow==8.4.0
speed =
    orjson>=3.5.4
	Brotli>=1.0.9
	aiodns>=1.1
	cchardet>=2.1.7

[options.package_data]
pincer = py.typed
