[metadata]
name = pincer
version = 0.16.0
description = Discord API wrapper rebuild from scratch.
long_description = file: docs/PYPI.md
long_description_content_type = text/markdown
author = Pincer-org
author_email = contact@pincer.dev
keywords = discord, api, asynchronous, websockets, aiohttp
license = MIT
license_file = LICENSE
platform = unix, linux, osx, cygwin, windows
url = https://pincer.dev
project_urls =
    Github repository=https://github.com/pincer-org/pincer
    ReadTheDocs=https://pincer.readthedocs.org
    Discord=https://discord.gg/8WkYz3fNFm
classifiers =
    Development Status :: 2 - Pre-Alpha
# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable
# Development Status :: 6 - Mature
# Development Status :: 7 - Inactive
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
[options]
include_package_data = True
packages =
    pincer
	pincer.objects
	pincer.objects.guild
	pincer.objects.user
	pincer.objects.app
	pincer.objects.voice
	pincer.objects.events
	pincer.objects.message
	pincer.core
	pincer.utils
	pincer.commands
	pincer.commands.components
	pincer.middleware
install_requires =
    aiohttp~=3.8
python_requires = >=3.8

[options.extras_require]
testing =
    coverage==6.3.2
	flake8==4.0.1
	tox==3.24.4
	pre-commit==2.17.0
	pytest==6.2.5
	pytest-cov==3.0.0
	mypy==0.910
img =
    Pillow==8.4.0
	types-Pillow==9.0.9
speed =
    orjson>=3.5.4
	Brotli>=1.0.9
	aiodns>=1.1
	cchardet>=2.1.7

[options.package_data]
pincer = py.typed
